app/src/test/resources/programs/valid/foonctions/recursiveFunction.exe
foo fib(n: Int) -> Int = {
    if n < 3 then {
        1
    } else {
        fib(n-1) + fib(n-2)
    }
}

foo main() -> Int = {
    fib(5)
}
