app/src/test/resources/programs/invalid/foonctions/noReturnType.exe
foo g(a: Int) = {
    a + 2
}

foo main() -> Int = {
    g(3)
}
